[package]
name = "crabi_test"
version = "0.1.4"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2021"
description = "An experimental Rust library for exploring and experimenting with ABI concepts and cross-language interoperability."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bensatlantik/crabi_test"
keywords = ["Rust", "ABI", "FFI", "interoperability", "education"]
categories = ["development-tools", "external-ffi-bindings", "no-std"]

[dependencies]
